# GW_SciML

./: .gitignore  CHANGES_combined_video.md  GFNO_INDEX.md  GFNO_TRAINING_COMPLETE.md  MULTI_COL_README.md  OPTIMIZATION_SUMMARY.md  README.md  README_multi_col_predictions.md  benchmark_dataset_classes.py  create_cross_section_video.py  create_patched_dataset.py  fno_predict.py  fno_train.py  generate_fno_predictions_refactored.py  generate_gino_predictions.py  generate_gino_predictions_multi_col.py  generate_gino_predictions_refactored.py  generate_mlp_preds.py  gino_predict.py  gino_train.py  interpolate_data.py  list_experiments.sh  pyproject.toml  requirements.txt  run_gino_predictions.sh  test_gfno_training_setup.py  test_gino.py  test_gno_block.py  test_mlp.py  train_fno.py  train_fno_interpolate_on_patches_multi_col.py  train_fno_w_interpolation.py  train_gfno_2d_planes.py  train_gino_on_patches.py  train_gino_on_patches_multi_col.py  train_gino_on_patches_multi_col_refactored.py  train_mlp.py  train_mlp_point_cloud.py
docs/: BENCHMARK_GUIDE.md  GFNO_ARCHITECTURE_DIAGRAM.md  GFNO_IMPLEMENTATION_SUMMARY.md  GFNO_QUICK_REFERENCE.md  GFNO_TRAINING_README.md  PLANE_DATASET_README.md  PLANE_NOTEBOOKS_README.md  TRAIN_VAL_SPLIT_README.md
gw-sciml/tests/: test_basic.py
hpc/: create_patched_dataset.pbs  find_latest_model.sh  fno_predict.pbs  fno_train.pbs  generate_fno_predictions.pbs  generate_gino_predictions.pbs  generate_gino_predictions_multi_col.pbs  gino_predict.pbs  gino_train.pbs  interpolate_data.pbs  manage_checkpoints.sh  submit.sh  submit_fno.sh  submit_fno_predictions.sh  submit_gino.sh  submit_gino_predictions.sh  submit_predictions.sh  test_mlp.pbs  train_fno.pbs  train_fno_interpolate_multi_col.pbs  train_gfno_2d_planes.pbs  train_gino.pbs  train_gino_multi_col.pbs  train_mlp.pbs
hpc/configs/: default.sh  no_var_loss.sh  paths.sh
hpc/configs/fno/: default.sh  forcing.sh  resume_default.sh  var_loss.sh
hpc/configs/gino/: default.sh  dynamic_sampling.sh  forcing.sh  forcing_default.sh  forcing_standard_loss.sh  local_testing.sh  masked_no_sampling.sh  mass_only.sh  (+6 more)
hpc/prediction_configs/: default.sh  high_lr.sh  three_vars.sh
notebooks/: 2dplane_data.ipynb  compare_metrics.ipynb  correct_bc_data.ipynb  create_masked_dataset.ipynb  create_patch_metadata.ipynb  create_patched_data.ipynb  create_patched_dataset.ipynb  create_results_table.ipynb  cross_correlation_analysis.ipynb  cross_section_analysis.ipynb  fno_predictions.ipynb  fno_predictions_points.ipynb  generate_plane_sequences.ipynb  interpolate_data.ipynb  load_grid_dataset.ipynb  mse_analysis_2d.ipynb  patch_dataset.ipynb  plot_mass_conc_variation_rates.ipynb  plot_mass_conc_variation_rates_preds.ipynb  plot_results.ipynb  predictions_analysis.ipynb  preprocess_data.ipynb  read_obs_data.ipynb  results_analysis.ipynb  test_data.ipynb  test_dataset_sampling.ipynb  test_fno_interpolate_patch.ipynb  test_gfno_model.ipynb  test_interpolate_data.ipynb  test_loss_fn.ipynb  test_model.ipynb  test_stored_outputs.ipynb  test_variance_aware_loss.ipynb  train_fno.ipynb  train_mlp.ipynb
src/data/: __init__.py  batch_sampler.py  data_utils.py  dataset.py  grid_dataset.py  patch_dataset.py  patch_dataset_multi_col.py  plane_dataset.py  points_dataset.py  transform.py
src/inference/: __init__.py  inference_utils.py  metrics.py  results.py  visualization.py
src/model/: handler.py  mlp.py
src/models/: __init__.py  gfno.py  handler.py
src/training/: __init__.py  checkpoint.py  config.py  parallel_utils.py  trainer.py  visualization.py
tests/: test_basic.py
(+14 files in other folders)
