[project]
name = "gw-sciml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "addict==2.4.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "appnope==0.1.4; sys_platform == 'darwin'",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "comm==0.2.2",
    "configargparse==1.7.1",
    "configmypy==0.2.0",
    "contourpy==1.3.2",
    "crc32c==2.7.1",
    "cycler==0.12.1",
    "dash==3.0.4",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "donfig==0.8.1.post1",
    "exceptiongroup==1.3.0",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "filelock==3.18.0",
    "flask==3.0.3",
    "fonttools==4.58.4",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "geopandas==1.1.1",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "h5py==3.14.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "iniconfig==2.1.0",
    "ipykernel==7.1.0",
    "ipython==9.3.0",
    "ipython-pygments-lexers==1.1.1",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "kiwisolver==1.4.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "multidict==6.6.2",
    "narwhals==1.44.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "numcodecs==0.16.1",
    "numpy==2.3.1",
    "open3d==0.18.0",
    "opt-einsum==3.4.0",
    "packaging==25.0",
    "pandas==2.3.0",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==11.2.1",
    "pip==25.1",
    "platformdirs==4.3.8",
    "plotly==6.1.2",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "psutil>=5.9.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pyogrio==0.11.1",
    "pyparsing==3.2.3",
    "pyproj==3.7.2",
    "pyquaternion==0.9.9",
    "pytest==8.4.1",
    "pytest-mock==3.14.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "referencing==0.36.2",
    "requests==2.32.4",
    "retrying==1.4.0",
    "rpds-py==0.25.1",
    "ruamel-yaml==0.18.14",
    "ruamel-yaml-clib==0.2.12",
    "scikit-learn==1.7.0",
    "scipy==1.16.0",
    "seaborn==0.13.2",
    "sentry-sdk==2.31.0",
    "setproctitle==1.3.6",
    "setuptools==78.1.1",
    "shapely==2.1.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "tensorly==0.9.0",
    "threadpoolctl==3.6.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "wandb==0.20.1",
    "wcwidth==0.2.13",
    "werkzeug==3.0.6",
    "wheel==0.45.1",
    "yarl==1.20.1",
    "zarr==3.0.8",
    "zencfg==0.3.0",
    "zipp==3.23.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "torch-geometric>=2.7.0",
    "torch-harmonics>=0.8.0",
    "torchinfo>=1.8.0",
    "tensorly-torch>=0.5.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
